--- a/src/main/resources/templates/crypt.html
+++ b/src/main/resources/templates/crypt.html
@@ -2,9 +2,76 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+	crossorigin="anonymous">
+
 <title>Diffie Hellman</title>
 </head>
 <body>
+	<div>
+		<h2>Alice</h2>
+		<p th:text="'Public p = ' + ${alice.getP}"></p>
+		<p th:text="'Public g = ' + ${alice.getG}"></p>
+		<p th:text="'Alice A = ' + ${alice.getA}"></p>
+		<p th:text="'Alice B = ' + ${alice.getB}"></p>
+		<p th:text="'Alice private key = ' + ${alice.privateKey}"></p>
+		<p th:text="'Alice secure key = ' + ${alice.sercretKey}"></p>
+
+
+		<div class="mb-3">
+			<label for="aliceTextMessage" class="form-label">Исходный
+				текст</label>
+			<textarea class="form-control" id="aliceTextMessage" rows="3"></textarea>
+		</div>
+
+		<div class="encrypt-button">
+			<input class="btn btn-primary" id="aliceEncrypt" type="submit"
+				value="Отправить">
+		</div>
+		
+		<div class="mb-3">
+			<label for="aliceIncomingMessage" class="form-label">Принятый текст</label>
+			<textarea class="form-control" id="aliceIncomingMessage" rows="3" readonly></textarea>
+		</div>
+
+	</div>
+	<div>
+		<h2>Bob</h2>
+		<p th:text="'Public p = ' + ${bob.getP}"></p>
+		<p th:text="'Public g = ' + ${bob.getG}"></p>
+		<p th:text="'Bob A = ' + ${bob.getA}"></p>
+		<p th:text="'Bob B = ' + ${bob.getB}"></p>
+		<p th:text="'Bob private key = ' + ${bob.privateKey}"></p>
+		<p th:text="'Bob secure key = ' + ${bob.sercretKey}"></p>
+
+
+		<div class="mb-3">
+			<label for="bobTextMessage" class="form-label">Исходный текст</label>
+			<textarea class="form-control" id="bobTextMessage" rows="3"></textarea>
+		</div>
+
+		<div class="encrypt-button">
+			<input class="btn btn-primary" id="bobEncrypt" type="submit"
+				value="Отправить">
+		</div>
+		<div class="mb-3">
+			<label for="bobIncomingMessage" class="form-label">Принятый текст</label>
+			<textarea class="form-control" id="bobIncomingMessage" rows="3" readonly></textarea>
+		</div>
+
+
+	</div>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
+	<script type="text/javascript" th:src="@{/scrypt/jquery.js}"></script>
+	<script type="text/javascript" th:src="@{/scrypt/scrypt.js}"></script>
 
 </body>
 </html>
