--- a/src/main/resources/templates/crypt.html
+++ b/src/main/resources/templates/crypt.html
@@ -35,8 +35,13 @@
 		</div>
 		
 		<div class="mb-3">
-			<label for="aliceIncomingMessage" class="form-label">Принятый текст</label>
+			<label for="aliceIncomingMessage" class="form-label">Принятый зашифрованный текст</label>
 			<textarea class="form-control" id="aliceIncomingMessage" rows="3" readonly></textarea>
+		</div>
+		
+		<div class="mb-3">
+			<label for="aliceIncomingDecrypted" class="form-label">Принятый расшифрованный текст</label>
+			<textarea class="form-control" id="aliceIncomingDecrypted" rows="3" readonly></textarea>
 		</div>
 
 	</div>
@@ -60,8 +65,12 @@
 				value="Отправить">
 		</div>
 		<div class="mb-3">
-			<label for="bobIncomingMessage" class="form-label">Принятый текст</label>
+			<label for="bobIncomingMessage" class="form-label">Принятый зашифрованный текст</label>
 			<textarea class="form-control" id="bobIncomingMessage" rows="3" readonly></textarea>
+		</div>
+		<div class="mb-3">
+			<label for="bobIncomingMessageDecrypted" class="form-label">Принятый расшифрованный текст</label>
+			<textarea class="form-control" id="bobIncomingMessageDecrypted" rows="3" readonly></textarea>
 		</div>
 
 
